# tdeck-slint-hello

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/slint/: CMakeLists.txt
components/slint/cmake/: FindSlint.cmake
main/: CMakeLists.txt  idf_component.yml  main.cpp  ui_TDeckHello.slint
main/ui/: main.slint
